correct warnings in classes